Updates to file formatting for image allowanve in GIT pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <div class="intro" alt="Picture of website creator">
 
-                <img src="/assets/images/selfie.jpg" />
+                <img src="./assets/images/selfie.jpg" />
             
                 <p>
                     Welcome to my Portfolio!
