--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>W.C. Portfolio</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./assets/style.css">
-    <link rel="images" href="./assets/images">
+    <link rel="stylesheet" href="assets/style.css">
+    
 </head>
 
 
