Changes to intro formatting and main header styling

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
          <!-- one -->
         <a href="https://github.com/Cableman687/System-Monitor">
             <section class="primary-card" id="system-monitor">
-                <h3><span>C++ System Monitor</span></h3>
+                <h3>C++ System Monitor</h3>
             </section>
         </a>   
         
